fix: la recherche doit cacher les contenus non pertinents marqués visibles suite à la navigation au clavier

--- a/css/pad.css
+++ b/css/pad.css
@@ -160,7 +160,8 @@ footer {
 	border-radius: 15px;
 }
 
-.hide {
+.hide,
+.displaySubSection .subSection.visible.hide {
 	display: none !important;
 }
 .isColumnResultFromSearch .hide {
